syntax = "proto3";

package main;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

option (gogoproto.testgen_all) = true;
option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;

enum MessageType {
  MSG_REQUEST_TO_SEND_FILE = 0;
  MSG_ACCEPT_FILE = 1;
  MSG_REJECT_FILE = 2;
  MSG_FILE_CHUNK = 3;
  MSG_FILE_CHUNK_ACK = 4;
}

message Message {
  MessageType type = 1;
  bytes body = 2;
}

message RequestToSendFile {
  uint32 request_id = 1;
  string file_name = 2;
  int64 file_size = 3;
}

message AcceptFile {
  uint32 request_id = 1;
  uint32 file_id = 2;
  uint32 chunk_size = 3;
  uint32 chunks_buf_size = 4;
  repeated uint32 clients = 5;
}

message RejectFile {
  uint32 request_id = 1;
}

message FileChunk {
  uint32 file_id = 1;
  uint32 chunk_id = 2;
  bytes data = 3;
}

message FileChunkAck {
  uint32 file_id = 1;
  uint32 chunk_id = 2;
}
